Added views, added corresponding urls, fixed static files handling in base.html, index.html now uses a template base.html

--- a/MevetProject/rental_ads/static/rental_ads/css/style_footer.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_footer.css
@@ -13,7 +13,7 @@ footer{
 /*  height: 200px;*/
   width: 100%;
   padding: 20px 10px;
-  background: url("/Users/mixysami/HTML Project/Mevet/Styles/fonmenu.jpg");
+   background: url("../img/fonmenu.jpg");
   background-size: cover;
 /*  background-size: contain;*/
   background-position: center;
