--- a/MevetProject/rental_ads/templates/banket.html
+++ b/MevetProject/rental_ads/templates/banket.html
@@ -1,224 +1,228 @@
+{% load static %}
+
 <html>
-	<head>
-		<title>banket</title>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="/Users/mixysami/HTML Project/Mevet/Styles/style_menu.css" type="text/css">
-		<link rel="stylesheet" href="/Users/mixysami/HTML Project/Mevet/Styles/style_footer.css" type="text/css">
-		<link rel="stylesheet" href="/Users/mixysami/HTML Project/Mevet/Styles/style_osnov.css" type="text/css">
+<head>
+    <title>banket</title>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="{% static 'rental_ads/css/style_menu.css' %}">
+    <link rel="stylesheet" href="{% static 'rental_ads/css/style_footer.css' %}">
+    <link rel="stylesheet" href="{% static 'rental_ads/css/style_osnov.css' %}">
 
-		<link href="https://fonts.cdnfonts.com/css/century-gothic?styles=24895" rel="stylesheet">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.cdnfonts.com/css/century-gothic?styles=24895" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		
-		<style>
-			
-		</style>
-	</head>
-	<body>
-		<header>
-			   <nav class="nav2">
-				    <a href="#" class="fa-solid fa-language" id="google_translate_element"  ><font class="txtm"> RU</font></a>
-				    
-				    <a href="#zatemnenie" class="fa-solid fa-location-dot"><font class="txtm"> ВОЛГОГРАД</font></a>
-				    <a href="#zatemnenie" class="fa-solid fa-laptop"><font class="txtm"> СТАНЬТЕ ПРОДАВЦОМ</font></a>
-			  </nav>
-			<div id="head">
-				<div class="wrap-logo">
-					<nav class="karegoriya_resursov"> 
-					  <div title="Menu" id="navigation_leaked"> 
-					   
-					  <input type="checkbox"> 
-					  <span></span> 
-					  <span></span> 
-					  <span></span> 
-					  <ul id="menyu_sayta"> 
-					  <li> 
-					  <a href="index.html">ГЛАВНАЯ СТРАНИЦА</a> 
-					  </li> 
-					  
-					  <li><a href="pagefoto.html" >ФОТОСТУДИИ</a>
-					  </li> 
-					  <li> 
-					  <a href="svadba.html" >ОРГАНИЗАЦИЯ СВАДЕБ</a> 
-					  </li>
-					  <li> 
-					  <a href="banket.html" style="text-decoration: underline; color: black;">БАНКЕТНЫЕ ЗАЛЫ</a> 
-					  </li>
-					  <li> 
-					  <a href="kino.html">КИНОЗАЛЫ</a> 
-					  </li>
-					  <li> 
-					  <a href="kon.html">ПЛОЩАДКИ ДЛЯ ПРОВЕДЕНИЯ КОНЦЕРОВ</a> 
-					  </li>
-					  </ul> 
-					  </div> 
-					</nav>
-				  <!-- <a href="#"class="fa-solid fa-bars" style=" font-size: 40px;"></a> -->
-				  <a href="#" class="logo"><img src="/Users/mixysami/HTML Project/Mevet/Styles/logo.png"  height="70px"></a>
-				  <div id="tp">
-					<form action="" >
-					  <input type="search" >
-					  <i class="fa fa-search" ></i>
-					</form>
-				</div>
-				  
-				  </div>
-				  <nav>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-				    <a href="#zatemnenie" class="fa-regular fa-comment ff" style="font-size: 20px;"><font class="txtm"> ЧАТ</font></a>
-				    <a href="#zatemnenie" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm"> ПРОФИЛЬ</font></a>
-				    <a href="#zatemnenie" class="fa-regular fa-heart ff" style="font-size: 20px;"><font class="txtm"> ИЗБРАННОЕ</font></a>
-			  	  </nav>
-			</div>
-			  
-		</header>
+    <style>
 
-		<div class="osnov">
-				<center>
-					<br>
-				<h1>Банкетные залы</h1>
-					<br>
-				
-			<div class="vtor">
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b1.jpg" height="310px" width="100%">
-						<h3 class="txtbold">Volga Hall</h3>
-						<p class="txtff">Волгоград, Профсоюзная, 13</p>
-						<h3 class="txtbold">от 10 000 руб</h3>
-							<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-						<!-- <i class="fa-regular fa-comment-dots txtbold">Написать продавцу</i> -->
-					</div>
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b2.jpg" height="310px" width="100%">
-						<h3 class="txtbold">Римини</h3>
-						<p class="txtff">Волгоград, Гагарина, 9 </p>
-						<h3 class="txtbold">от 10 000 руб</h3>
-						<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-					</div>
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b3.jpg" height="310px" width="100%">
-						<h3 class="txtbold">Волгоград</h3>
-						<p class="txtff">Волгоград, Мира, 12</p>
-						<h3 class="txtbold">от 5000 руб</h3>
-						<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-					</div>
-			</div>
+    </style>
+</head>
+<body>
+<header>
+    <nav class="nav2">
+        <a href="#" class="fa-solid fa-language" id="google_translate_element"><font class="txtm"> RU</font></a>
 
-			<div class="vtor">
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b4.jpg" height="310px" width="90%">
-						<h3 class="txtbold">Якитория</h3>
-						<p class="txtff">Волгоград, наб. 62-й Армии, 6</p>
-						<h3 class="txtbold">от 5000 руб</h3>
-						<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-					</div>
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b5.jpg" height="310px" width="100%">
-						<h3 class="txtbold">7 королей</h3>
-						<p class="txtff">Волгоград, Электролесовская, 74</p>
-						<h3 class="txtbold">от 2000 руб</h3>
-						<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-					</div>
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b6.jpg" height="310px" width="90%">
-						<h3 class="txtbold">Alex Hall</h3>
-						<p class="txtff">Волгоград, Дорожная, 36а</p>
-						<h3 class="txtbold">от 15000 руб</h3>
-						<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-					</div>
-			</div>
+        <a href="#zatemnenie" class="fa-solid fa-location-dot"><font class="txtm"> ВОЛГОГРАД</font></a>
+        <a href="#zatemnenie" class="fa-solid fa-laptop"><font class="txtm"> СТАНЬТЕ ПРОДАВЦОМ</font></a>
+    </nav>
+    <div id="head">
+        <div class="wrap-logo">
+            <nav class="karegoriya_resursov">
+                <div title="Menu" id="navigation_leaked">
 
-			<div class="vtor">
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b7.jpg" height="310px" width="100%">
-						<h3 class="txtbold">Plaza</h3>
-						<p class="txtff">Волгоград, Новоузенская, 2/1</p>
-						<h3 class="txtbold">от 20 000 руб</h3>
-						<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-					</div>
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b8.jpg" height="310px" width="100%">
-						<h3 class="txtbold">Prestige</h3>
-						<p class="txtff">Волгоград, Электролесовская, 74 </p>
-						<h3 class="txtbold">от 10 000 руб</h3>
-						<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-					</div>
-					<div class="col1-3">
-						<img src="/Users/mixysami/HTML Project/Mevet/Styles/b9.jpg" height="310px" width="100%">
-						<h3 class="txtbold">Антей</h3>
-						<p class="txtff">Волгоград, Удмуртская, 33</p>
-						<h3 class="txtbold">от 5000 руб</h3>
-						<nav class="nav3">
-								<a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
-				    		<a class="fa-regular fa-heart" style="font-size: 30px;"></a>
-							</nav>
-					</div>
-			</div>
-			<br>
-		</div>
+                    <input type="checkbox">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <ul id="menyu_sayta">
+                        <li>
+                            <a href="index.html">ГЛАВНАЯ СТРАНИЦА</a>
+                        </li>
 
-		</center>
+                        <li><a href="pagefoto.html">ФОТОСТУДИИ</a>
+                        </li>
+                        <li>
+                            <a href="svadba.html">ОРГАНИЗАЦИЯ СВАДЕБ</a>
+                        </li>
+                        <li>
+                            <a href="banket.html" style="text-decoration: underline; color: black;">БАНКЕТНЫЕ ЗАЛЫ</a>
+                        </li>
+                        <li>
+                            <a href="kino.html">КИНОЗАЛЫ</a>
+                        </li>
+                        <li>
+                            <a href="kon.html">ПЛОЩАДКИ ДЛЯ ПРОВЕДЕНИЯ КОНЦЕРОВ</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- <a href="#"class="fa-solid fa-bars" style=" font-size: 40px;"></a> -->
+            <a href="#" class="logo"><img src="../static/rental_ads/img/logo.png" height="70px"></a>
+            <div id="tp">
+                <form action="">
+                    <input type="search">
+                    <i class="fa fa-search"></i>
+                </form>
+            </div>
 
-       <div id="zatemnenie">
-	      <div id="okno">
-	        <p>Авторизуйтесь</p><br>
+        </div>
+        <nav>
 
-			   <form id="login-form">
-      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
-      <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-      <input type="submit" value="Login" id="login-form-submit" class="close">
-    </form>
-			  
-	        <a href="#" class="close">Закрыть окно</a>
-	      </div>
-	    </div>
-    
-		<footer class="footer">
-     <div class="container">
+            <a href="#zatemnenie" class="fa-regular fa-comment ff" style="font-size: 20px;"><font class="txtm">
+                ЧАТ</font></a>
+            <a href="#zatemnenie" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm">
+                ПРОФИЛЬ</font></a>
+            <a href="#zatemnenie" class="fa-regular fa-heart ff" style="font-size: 20px;"><font class="txtm">
+                ИЗБРАННОЕ</font></a>
+        </nav>
+    </div>
 
-     
-        
+</header>
+
+<div class="osnov">
+    <center>
+        <br>
+        <h1>Банкетные залы</h1>
+        <br>
+
+        <div class="vtor">
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b1.jpg" height="310px" width="100%">
+                <h3 class="txtbold">Volga Hall</h3>
+                <p class="txtff">Волгоград, Профсоюзная, 13</p>
+                <h3 class="txtbold">от 10 000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+                <!-- <i class="fa-regular fa-comment-dots txtbold">Написать продавцу</i> -->
+            </div>
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b2.jpg" height="310px" width="100%">
+                <h3 class="txtbold">Римини</h3>
+                <p class="txtff">Волгоград, Гагарина, 9 </p>
+                <h3 class="txtbold">от 10 000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+            </div>
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b3.jpg" height="310px" width="100%">
+                <h3 class="txtbold">Волгоград</h3>
+                <p class="txtff">Волгоград, Мира, 12</p>
+                <h3 class="txtbold">от 5000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+            </div>
+        </div>
+
+        <div class="vtor">
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b4.jpg" height="310px" width="90%">
+                <h3 class="txtbold">Якитория</h3>
+                <p class="txtff">Волгоград, наб. 62-й Армии, 6</p>
+                <h3 class="txtbold">от 5000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+            </div>
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b5.jpg" height="310px" width="100%">
+                <h3 class="txtbold">7 королей</h3>
+                <p class="txtff">Волгоград, Электролесовская, 74</p>
+                <h3 class="txtbold">от 2000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+            </div>
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b6.jpg" height="310px" width="90%">
+                <h3 class="txtbold">Alex Hall</h3>
+                <p class="txtff">Волгоград, Дорожная, 36а</p>
+                <h3 class="txtbold">от 15000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+            </div>
+        </div>
+
+        <div class="vtor">
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b7.jpg" height="310px" width="100%">
+                <h3 class="txtbold">Plaza</h3>
+                <p class="txtff">Волгоград, Новоузенская, 2/1</p>
+                <h3 class="txtbold">от 20 000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+            </div>
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b8.jpg" height="310px" width="100%">
+                <h3 class="txtbold">Prestige</h3>
+                <p class="txtff">Волгоград, Электролесовская, 74 </p>
+                <h3 class="txtbold">от 10 000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+            </div>
+            <div class="col1-3">
+                <img src="/Users/mixysami/HTML Project/Mevet/Styles/b9.jpg" height="310px" width="100%">
+                <h3 class="txtbold">Антей</h3>
+                <p class="txtff">Волгоград, Удмуртская, 33</p>
+                <h3 class="txtbold">от 5000 руб</h3>
+                <nav class="nav3">
+                    <a class="fa-regular fa-comment-dots" style="font-size: 30px;"><font class="txts"></font></a>
+                    <a class="fa-regular fa-heart" style="font-size: 30px;"></a>
+                </nav>
+            </div>
+        </div>
+        <br>
+</div>
+
+</center>
+
+<div id="zatemnenie">
+    <div id="okno">
+        <p>Авторизуйтесь</p><br>
+
+        <form id="login-form">
+            <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+            <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+            <input type="submit" value="Login" id="login-form-submit" class="close">
+        </form>
+
+        <a href="#" class="close">Закрыть окно</a>
+    </div>
+</div>
+
+<footer class="footer">
+    <div class="container">
+
+
         <div class="footer-col">
-          <h4>Подпишитесь на нас</h4>
-          <div class="social-links">
-            <a href="https://vk.com/mixysami"><i class="fa-brands fa-vk"></i></a>
-            <a href="https://t.me/mixxxs"><i class="fa-brands fa-telegram"></i></a>
-            <a href="https://www.instagram.com/mixysami*"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.google.com/intl/ru/gmail/about/"><i class="fa-solid fa-envelope"></i></a>
-          </div>
-      </div>
+            <h4>Подпишитесь на нас</h4>
+            <div class="social-links">
+                <a href="https://vk.com/mixysami"><i class="fa-brands fa-vk"></i></a>
+                <a href="https://t.me/mixxxs"><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://www.instagram.com/mixysami*"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.google.com/intl/ru/gmail/about/"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+        </div>
 
-      <p style="color: white;">©2022 MEVET | All Rights Reserved</p>
-     </div>
-  </footer>
-	<script src="https://kit.fontawesome.com/7dd3d9efdc.js" crossorigin="anonymous"></script>
-	
+        <p style="color: white;">©2022 MEVET | All Rights Reserved</p>
+    </div>
+</footer>
+<script src="https://kit.fontawesome.com/7dd3d9efdc.js" crossorigin="anonymous"></script>
 
-	
-	</body>
+
+</body>
 </html>
