Changed svadba.html, kon.html, kino.html to use templates

--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -38,7 +38,7 @@
                     <span></span>
                     <ul id="menyu_sayta">
                         <li>
-                            <a href="index.html" style="text-decoration: underline; color: black;">ГЛАВНАЯ СТРАНИЦА</a>
+                            <a href="/" style="text-decoration: underline; color: black;">ГЛАВНАЯ СТРАНИЦА</a>
                         </li>
 
                         <li><a href="/pagefoto">ФОТОСТУДИИ</a>
