--- a/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
@@ -45,21 +45,14 @@
 }
 
 
-.osnov{
-  width: 100%;
-  height: auto;
-  
-/*  margin-bottom: 5%;*/
-background-color: #FFFAFA;
+.rentals-container {
+        display: flex;
+        flex-wrap: wrap;
 }
-.vtor{
-/*  margin: 0 auto;*/
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-top: 10px;
-  margin-bottom: 10px;
-/*  width: 100%;*/
-  display: flex;
+.rental-item {
+        width: 33.33%;
+        padding: 10px;
+        box-sizing: border-box;
 }
 
 .col1-3{
