--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -36,26 +36,29 @@
                     <span></span>
                     <span></span>
                     <span></span>
+
+                    {% with request.path|lower|slice:":-1" as current_path %}
                     <ul id="menyu_sayta">
                         <li>
-                            <a href="/" style="text-decoration: underline; color: black;">ГЛАВНАЯ СТРАНИЦА</a>
+                            <a href="" style="text-decoration: {% if '' == current_path %}underline; color: black;{% else %}none{% endif %};">ГЛАВНАЯ СТРАНИЦА</a>
                         </li>
 
-                        <li><a href="/pagefoto">ФОТОСТУДИИ</a>
+                        <li><a href="/pagefoto" style="text-decoration: {% if '/pagefoto' == current_path %}underline; color: black;{% else %}none{% endif %};">ФОТОСТУДИИ</a>
                         </li>
                         <li>
-                            <a href="/svadba">ОРГАНИЗАЦИЯ СВАДЕБ</a>
+                            <a href="/svadba" style="text-decoration: {% if '/svadba' == current_path %}underline; color: black;{% else %}none{% endif %};">ОРГАНИЗАЦИЯ СВАДЕБ</a>
                         </li>
                         <li>
-                            <a href="/banket">БАНКЕТНЫЕ ЗАЛЫ</a>
+                            <a href="/banket" style="text-decoration: {% if '/banket' == current_path %}underline; color: black;{% else %}none{% endif %};">БАНКЕТНЫЕ ЗАЛЫ</a>
                         </li>
                         <li>
-                            <a href="/kino">КИНОЗАЛЫ</a>
+                            <a href="/kino" style="text-decoration: {% if '/kino' == current_path %}underline; color: black;{% else %}none{% endif %};">КИНОЗАЛЫ</a>
                         </li>
                         <li>
-                            <a href="/kon">ПЛОЩАДКИ ДЛЯ ПРОВЕДЕНИЯ КОНЦЕРОВ</a>
+                            <a href="/kon" style="text-decoration: {% if '/kon' == current_path %}underline; color: black;{% else %}none{% endif %};">ПЛОЩАДКИ ДЛЯ ПРОВЕДЕНИЯ КОНЦЕРОВ</a>
                         </li>
                     </ul>
+                    {% endwith %}
                 </div>
             </nav>
             <!-- <a href="#"class="fa-solid fa-bars" style=" font-size: 40px;"></a> -->
