--- a/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
@@ -50,15 +50,60 @@
     padding: 0 20px;
 }
 
+/* new on*/
 .rentals-container {
         display: flex;
         flex-wrap: wrap;
+
     }
  .rental-item {
-        width: 33.33%;
-        padding: 10px;
-        box-sizing: border-box;
+
+  width: 30%;
+  margin: 0.5%;
+  margin-bottom: 20px;
+  padding: 10px;
+        border-radius: 15px;
+        border: solid 0.5px black;
+         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+         transition: 0.3s;
     }
+
+.rental-item:hover {
+    box-shadow: 0px 40px 40px 0px rgba(0,0,0,0.2);
+    border-radius: 35px;
+    border: solid 2px gray;
+}
+
+.rental-item img {
+
+ width: 90%;
+  height: 280px;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.rental-item h3 {
+  margin-bottom: 10px;
+}
+
+.rental-item p {
+  margin-bottom: 5px;
+}
+
+.add-to-favorites {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.add-to-favorites:hover {
+  background-color: #0056b3;
+}
+
+/* new off*/
 
 .osnov{
   width: 100%;
@@ -69,7 +114,8 @@ background-color: #FFFAFA;
 }
 .vtor{
 /*  margin: 0 auto;*/
-  margin-left: 5%;
+  margin-left: 6%;
+
   margin-right: 5%;
   margin-top: 10px;
   margin-bottom: 10px;
