--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -40,7 +40,7 @@
                     {% with request.path|lower|slice:":-1" as current_path %}
                     <ul id="menyu_sayta">
                         <li>
-                            <a href="" style="text-decoration: {% if '' == current_path %}underline; color: black;{% else %}none{% endif %};">ГЛАВНАЯ СТРАНИЦА</a>
+                            <a href="/" style="text-decoration: {% if '' == current_path %}underline; color: black;{% else %}none{% endif %};">ГЛАВНАЯ СТРАНИЦА</a>
                         </li>
 
                         <li><a href="/pagefoto" style="text-decoration: {% if '/pagefoto' == current_path %}underline; color: black;{% else %}none{% endif %};">ФОТОСТУДИИ</a>
