--- a/MevetProject/rental_ads/templates/index.html
+++ b/MevetProject/rental_ads/templates/index.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}menu{% endblock %}
+{% block title %}main page{% endblock %}
 
 {% block content %}
 <div class="video-bg">
