--- a/MevetProject/rental_ads/templates/kino.html
+++ b/MevetProject/rental_ads/templates/kino.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Svadba{% endblock %}
+{% block title %}kino{% endblock %}
 
 {% block content %}
 <h1>Кинозалы</h1>
