--- a/MevetProject/rental_ads/templates/svadba.html
+++ b/MevetProject/rental_ads/templates/svadba.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Svadba{% endblock %}
+{% block title %}svadba{% endblock %}
 
 {% block content %}
 <div class="osnov">
