--- a/MevetProject/rental_ads/templates/kino.html
+++ b/MevetProject/rental_ads/templates/kino.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Svadba{% endblock %}
+{% block title %}kino{% endblock %}
 
 {% block content %}
 <h1>Кинозалы</h1>
@@ -10,7 +10,7 @@
 <div class="rentals-container">
     {% for rental in rental_list %}
         <div class="rental-item">
-            <img src="{{ rental.image.url }}" >
+            <img src="{{ rental.main_image.url }}" >
             <h3>{{ rental.name }}</h3>
             <p>Description of Product 4</p>
             <p>{{ rental.address }}</p>
