--- a/MevetProject/rental_ads/templates/kino.html
+++ b/MevetProject/rental_ads/templates/kino.html
@@ -9,6 +9,7 @@
 
 <div class="rentals-container">
     {% for rental in rental_list %}
+    <a href="{% url 'rental_detail' category_name=rental.category.name rental_id=rental.id %}">
         <div class="rental-item">
             <img src="{{ rental.main_image.url }}" >
             <h3>{{ rental.name }}</h3>
@@ -16,6 +17,7 @@
             <p>{{ rental.address }}</p>
             <button class="add-to-favorites">Add to Favorites</button>
         </div>
+    </a>
     {% endfor %}
 </div>
 {% endblock %}
