Added link handling on the search page

--- a/MevetProject/rental_ads/templates/rental_search_results.html
+++ b/MevetProject/rental_ads/templates/rental_search_results.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Search Results</h1>
+<h1>Search Results</h1>
 
-    <div class="rentals-container">
-        {% for rental in rental_list %}
-            <div class="rental-item">
-                <h3>{{ rental.title }}</h3>
-                <p>{{ rental.description }}</p>
-                <p>{{ rental.address }}</p>
-            </div>
-        {% empty %}
-            <p>No results found.</p>
-        {% endfor %}
+<div class="rentals-container">
+    {% for rental in rental_list %}
+    <div class="rental-item">
+        <a href="{% url 'rental_detail' category_name=rental.category.name rental_id=rental.id %}">
+            <h3>{{ rental.title }}</h3>
+            <p>{{ rental.description }}</p>
+            <p>{{ rental.address }}</p>
+        </a>
     </div>
+    {% empty %}
+    <p>No results found.</p>
+    {% endfor %}
+</div>
 {% endblock %}
